data/derived/fa15/progs/unify/prog0143.ml.out
Characters 55-56:
  let fixpoint (f,b) = wwhile ((let g b = (f,f(b)= b) in g),b);;
                                                         ^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
